Se ha modificado Base64 en AuthorityImpl
Se ha utilizado Commons Codec para calcular Base64 en AuthorityImpl